# synthify

./: .gitignore  README.md  pyproject.toml
src/synthify/: config.py  dreamer.py  world.py
src/synthify/generation/: __init__.py
src/synthify/generation/backends/: openai_api.py
src/synthify/generation/character/: __init__.py  character.py
tests/: basics.py
tests/backends/: openai_api.py
tests/test_data/: characters.json  world_context.txt
